--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 </style>
    <h1 style="font-size:5vw"> </h1>
    <h2 class="animate__animated animate__zoomInDown" style="animation-duration:1.0s; color: white; font-size:4vw">
-    Carolus Studios Offical website UNDER CONSTRUCTION
+    Offical Site for Storm Productions
     </h2> 
     <h3 class="animate__animated animate__jackInTheBox" style="animation-delay:1.5s; animation-duration:1.1s; color: white; font-size:3.3vw">
-    Maintained by shatterstar9652 (88ggjjj)
+    Code by shatterstar9652 (88ggjjj)
     </h3>
     </style>
   <script src="./app.js"></script>
